ensure menu browsable on small screens + styling, adresses most needs of #28?

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ html {
   opacity: 0;
 }
 aside.navigation-drawer {
-  height: 100%;
-  overflow: unset;
+  padding: 0;
+  overflow-y: visible;
 }
 .navigation-drawer--permanent.navigation-drawer--clipped {
   max-height: calc(100vh);
@@ -19,7 +19,7 @@ nav .toolbar__title img {
 nav v-title {
   margin: 5px 0px 0px 15px;
   float: left;
-  line-height: 1;
+  line-height: 0.75;
 }
 nav .source {
   font-size: 12px;
@@ -337,10 +337,10 @@ a:hover, a:visited:hover {
     width: 60px;
   }
   nav v-title {
-    font-size: 30px;
+    font-size: 24px;
   }
   nav .source {
-    font-size: 20px;
+    font-size: 16px;
   }
   nav .source .update, .disclaimer {
     display: none;
